                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.5


  *) [TS-1977] Build issues on OSX / clang related to stacksize changes.

  *) [TS-1972] TSNetAcceptNamedProtocol does not receive connections.

  *) [TS-1970] Using ssl_ca_name= in ssl_multicert.config fails.

  *) [TS-1946] Reduce the verbosity of SSL handshake errors.

  *) [TS-1971] Switch jtest over to standard argument parsing.

  *) [TS-1786] Only enable -Werror for development builds.

  *) [TS-1960] Decouple stacksize config from core, this fixes regressions.

  *) [TS-1959] traffic_manager not honoring some records.config settings
   necessary for e.g. logging.

  *) [TS-745] support interim caching in storage
   to eanble, use '--enable-interim-cache' configure option.

  *) [TS-1968] Promote header_rewrite plugin from experimental

  *) [TS-1961] Add tsxs support for querying installation variables.

  *) [TS-1886] Allow users to attempt gcc builds on Mac OS X.

  *) [TS-1934] Make geoip_acl experimental plugin compile.

  *) [TS-1948] Remove obsolete TSPluginLicenseRequired and plugin.db.

  *) [TS-1942] Remove username.cache configs, they are obsolete and long gone.

  *) [TS-1496] Enable per transaction flow control.

  *) [TS-1684] Added more ProxyAllocators for faster and local memory
   allocation.  Have seen a doubling in performance depending on the benchmark.
   Details in the ticket.

  Changes with Apache Traffic Server 3.3.4


  *) [TS-1940] HostDB gets reinitialized on startup.

  *) [TS-1941] Make Linux native-AIO build cleanly.

  *) [TS-1938] Remove unnecessary thread_id() wrapper in reclaimable freelist.
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  Changes with Apache Traffic Server 3.3.3 (never released)


  *) [TS-1936] Make traffic_logstats honor the log-directory as intended.

  *) [TS-1937] Prevent assert on SSL forward proxy connect.
